2006-04-04  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/xf8_16bpp/Makefile.am:
	* hw/xfree86/xf8_16bpp/cfb8_16.h:
	* hw/xfree86/xf8_16bpp/cfb8_16module.c:
	* hw/xfree86/xf8_16bpp/cfbscrinit.c:
	* hw/xfree86/xf8_16bpp/cfbwindow.c:
	Bug #5729: Convert xf8_16bpp to fb.  chips(4) users please test.

2006-04-04  Adam Jackson  <ajax@freedesktop.org>

	* hw/darwin/darwin.c:
	* hw/xfree86/common/xf86Init.c:
	Bug #5300: Fix missing spaces in the Build OS line in the log. 
	(Egmont Koblinger)

3006-04-04  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/ddc/print_edid.c:
	Bug #4806: Dump the raw EDID contents in hex to the log file for
	better debugging.  (Philip Prindeville)

2006-04-03  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Config.c:
	Bug #2142: Make font path logging more readable. (Eduard Fuchs)

2006-04-03  Adam Jackson  <ajax@freedesktop.org>

	* Xprint/Makefile.am:
	* Xprint/pcl/PclArea.c:
	* Xprint/pcl/PclColor.c:
	* Xprint/pcl/PclGC.c:
	* Xprint/pcl/PclInit.c:
	* Xprint/ps/PsInit.c:
	* Xprint/raster/Raster.c:
	Bug #4766: Convert all Xprint drivers to fb.

2006-04-03  Adam Jackson  <ajax@freedesktop.org>

	* fb/fbfill.c:
	* fb/fbwindow.c:
	Bug #5478: More use of fbSOlidFillmmx.  (Jim Huang)

2006-04-03  Adam Jackson  <ajax@freedesktop.org>

	* fb/fbmmx.c:
	Bug #6346: Build fix when using gcc -mno-sse. (Jonathan 
	Adamczewski)

2006-04-03  Daniel Stone  <daniel@freedesktop.org>

	* xkb/xkbUtils.c:
	Bug #1358: Make ISO_Prev_Group cycle/wrap as ISO_Next_Group does.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/glxProxy/glxcmds.c:
	Coverity #38: Dead branch elimination.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* Xext/sync.c:
	Coverity #75: Dead variable elimination.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* os/xdmauth.c:
	Coverity #82: Dead variable elimination.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* GL/glx/glxcmdsswap.c:
	Coverity #271: Fix an unbelievably boneheaded NULL chase.
